--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "lodash-webpack-plugin": "^0.9.4",
     "ora": "^0.3.0",
     "phantomjs-prebuilt": "^2.1.1",
+    "popper.js": "1.0.0-alpha.3",
     "shelljs": "^0.7.4",
     "tether": "^1.3.3",
     "url-loader": "^0.5.7",
