--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
   },
   "dependencies": {
     "moment": "^2.14.1",
-    "vue": "^2.0.0"
+    "vue": "^2.0.8",
+    "vue-template-compiler": "2.0.8"
   },
   "devDependencies": {
     "babel-core": "^6.10.4",
@@ -49,13 +50,13 @@
     "babel-preset-stage-2": "^6.0.0",
     "chromedriver": "^2.21.2",
     "connect-history-api-fallback": "^1.3.0",
-    "css-loader": "^0.25.0",
+    "css-loader": "^0.26.0",
     "eslint": "^3.6.1",
     "eslint-config-standard": "^6.1.0",
     "eslint-friendly-formatter": "^2.0.5",
     "eslint-loader": "^1.5.0",
     "eslint-plugin-html": "^1.3.0",
-    "eslint-plugin-promise": "^2.0.1",
+    "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^2.0.1",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.13.3",
@@ -63,25 +64,25 @@
     "file-loader": "^0.9.0",
     "function-bind": "^1.0.2",
     "html-webpack-plugin": "^2.8.1",
-    "inject-loader": "^2.0.1",
+    "inject-loader": "^3.0.0-beta2",
     "jasmine": "^2.4.1",
     "jasmine-core": "^2.4.1",
     "js-beautify": "^1.6.3",
     "json-loader": "^0.5.4",
-    "karma": "^0.13.15",
-    "karma-chrome-launcher": "^1.0.1",
+    "karma": "^1.3.0",
+    "karma-chrome-launcher": "^2.0.0",
     "karma-coverage": "^1.0.0",
     "karma-firefox-launcher": "^1.0.0",
-    "karma-jasmine": "^0.3.6",
+    "karma-jasmine": "^1.0.2",
     "karma-mocha-reporter": "^2.0.4",
-    "karma-phantomjs-launcher": "^0.2.1",
+    "karma-phantomjs-launcher": "^1.0.2",
     "karma-safari-launcher": "^1.0.0",
     "karma-sauce-launcher": "^1.0.0",
     "karma-sourcemap-loader": "^0.3.0",
-    "karma-spec-reporter": "0.0.23",
+    "karma-spec-reporter": "0.0.26",
     "karma-webpack": "^1.7.0",
-    "lodash": "^4.12.0",
-    "lodash-webpack-plugin": "^0.9.4",
+    "lodash": "^4.17.2",
+    "lodash-webpack-plugin": "^0.10.6",
     "ora": "^0.3.0",
     "phantomjs-prebuilt": "^2.1.1",
     "popper.js": "1.0.0-alpha.3",
@@ -97,6 +98,6 @@
     "webpack": "^1.13.2",
     "webpack-dev-middleware": "^1.8.3",
     "webpack-hot-middleware": "^2.12.2",
-    "webpack-merge": "^0.14.1"
+    "webpack-merge": "^0.17.0"
   }
 }
