--- a/package.json
+++ b/package.json
@@ -34,26 +34,25 @@
     "test": "karma start build/karma.conf.js"
   },
   "dependencies": {
-    "moment": "^2.14.1",
-    "vue": "^2.0.8",
-    "vue-template-compiler": "2.0.8"
+    "moment": "^2.17.0",
+    "vue": "^2.1.0"
   },
   "devDependencies": {
-    "babel-core": "^6.10.4",
-    "babel-helper-vue-jsx-merge-props": "^2.0.1",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-lodash": "^3.1.4",
+    "babel-core": "^6.10.0",
+    "babel-eslint": "^7.0.0",
+    "babel-helper-vue-jsx-merge-props": "^2.0.0",
+    "babel-loader": "^6.2.0",
+    "babel-plugin-lodash": "^3.1.0",
     "babel-plugin-syntax-jsx": "^6.8.0",
     "babel-plugin-transform-runtime": "^6.0.0",
     "babel-plugin-transform-vue-jsx": "^3.1.0",
     "babel-preset-es2015": "^6.0.0",
     "babel-preset-stage-2": "^6.0.0",
-    "chromedriver": "^2.21.2",
     "connect-history-api-fallback": "^1.3.0",
     "css-loader": "^0.26.0",
-    "eslint": "^3.6.1",
+    "eslint": "^3.7.0",
     "eslint-config-standard": "^6.1.0",
-    "eslint-friendly-formatter": "^2.0.5",
+    "eslint-friendly-formatter": "^2.0.0",
     "eslint-loader": "^1.5.0",
     "eslint-plugin-html": "^1.3.0",
     "eslint-plugin-promise": "^3.4.0",
@@ -64,40 +63,46 @@
     "file-loader": "^0.9.0",
     "function-bind": "^1.0.2",
     "html-webpack-plugin": "^2.8.1",
-    "inject-loader": "^3.0.0-beta2",
     "jasmine": "^2.4.1",
     "jasmine-core": "^2.4.1",
-    "js-beautify": "^1.6.3",
     "json-loader": "^0.5.4",
     "karma": "^1.3.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-coverage": "^1.0.0",
-    "karma-firefox-launcher": "^1.0.0",
-    "karma-jasmine": "^1.0.2",
-    "karma-mocha-reporter": "^2.0.4",
-    "karma-phantomjs-launcher": "^1.0.2",
-    "karma-safari-launcher": "^1.0.0",
-    "karma-sauce-launcher": "^1.0.0",
-    "karma-sourcemap-loader": "^0.3.0",
+    "karma-coverage": "^1.1.1",
+    "karma-mocha": "^1.2.0",
+    "karma-phantomjs-launcher": "^1.0.0",
+    "karma-sinon-chai": "^1.2.0",
+    "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.26",
     "karma-webpack": "^1.7.0",
     "lodash": "^4.17.2",
     "lodash-webpack-plugin": "^0.10.6",
+    "lolex": "^1.4.0",
+    "mocha": "^3.1.0",
+    "chai": "^3.5.0",
+    "sinon": "^1.17.3",
+    "sinon-chai": "^2.8.0",
+    "inject-loader": "^2.0.1",
+    "isparta-loader": "^2.0.0",
+    "opn": "^4.0.2",
     "ora": "^0.3.0",
-    "phantomjs-prebuilt": "^2.1.1",
+    "phantomjs-prebuilt": "^2.1.3",
+    "semver": "^5.3.0",
     "popper.js": "1.0.0-alpha.3",
     "shelljs": "^0.7.4",
     "url-loader": "^0.5.7",
-    "vue-hot-reload-api": "^2.0.5",
-    "vue-html-loader": "^1.0.0",
-    "vue-loader": "^9.4.0",
+    "vue-loader": "^10.0.0",
     "vue-router": "^2.0.0",
     "vue-style-loader": "^1.0.0",
+    "vue-template-compiler": "^2.1.0",
     "vuikit-docs": "0.1.0",
     "vuikit-theme": "git+https://github.com/vuikit/vuikit-theme.git",
     "webpack": "^1.13.2",
     "webpack-dev-middleware": "^1.8.3",
     "webpack-hot-middleware": "^2.12.2",
-    "webpack-merge": "^0.17.0"
+    "webpack-merge": "^0.18.0"
+  },
+  "engines": {
+    "node": ">= 4.0.0",
+    "npm": ">= 3.0.0"
   }
 }
