--- a/test/unit/.eslintrc
+++ b/test/unit/.eslintrc
@@ -1,14 +1,12 @@
 {
   "env": {
-    "jasmine": true
+    "mocha": true
   },
   "globals": {
     "beforeEach": true,
     "describe": true,
     "it": true,
     "expect": true,
-    "waitForUpdate": true,
-    "triggerEvent": true,
-    "createTextVNode": true
+    "sinon": true
   }
 }
